# [[bin]]
# name = "loadpeople"
# path = "src/tools/loadpeople.rs"

[package]
name = "fsn"
version = "1.0.0"
authors = ["Ilya Golshtein <gie@arenadata.io>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-session = "*"
serde = "1.0.130"
serde_json = "1.0.68"
dotenv = "0.15.0"
fern = "0.6.0"
log = "0.4.14"
thiserror = "1.0.30"
chrono = "0.4.19"
tokio = "1.12.0"
tokio-stream = "0.1.7"
async-trait = "0.1.51"
actix-service = "2.0.1"
futures = "0.3.17"
mysql = "18.*"
rust-argon2 = "0.8"
csv = "1.1"
rand = "*"

[dev-dependencies]
actix-rt = "1"
